[fe-be-interaction] (UI) Fix property value overflowing from entity-details table

--- a/UI/temsUI/src/app/public/property-render/property-render.component.scss
+++ b/UI/temsUI/src/app/public/property-render/property-render.component.scss
@@ -1,3 +1,8 @@
 .table > tbody > tr > td {
     vertical-align: middle;
 }
+
+.prop-val{
+    word-wrap: break-word;
+    overflow-wrap: anywhere;
+}
