--- a/UI/temsUI/src/app/tems-components/equipment/equipment-details/equipment-details-general/equipment-details-general.component.scss
+++ b/UI/temsUI/src/app/tems-components/equipment/equipment-details/equipment-details-general/equipment-details-general.component.scss
@@ -14,3 +14,7 @@
     align-content: center;
   }
 }
+
+.overflow-auto {
+  overflow: auto;
+}
